@@ -15,7 +15,9 @@ import com.ucacue.bar.repository.StockMovementRepository;
 import com.ucacue.bar.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -25,155 +27,267 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.List;
-import java.util.stream.Collectors;
+ 
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class ProductService {
     
+    private static final String MSG_PRODUCTO_NO_ENCONTRADO = "Producto no encontrado";
+    
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
     private final StockMovementRepository stockMovementRepository;
     private final UserRepository userRepository;
-    private final AlgoliaService algoliaService;
-    
-    public Page<ProductDTO> getAllProducts(String search, Long categoryId, Pageable pageable) {
+    private final RealtimeGateway realtimeGateway;
+
+    /**
+     * Retrieves a page of products based on the provided search criteria.
+     *
+     * @param search       the search query
+     * @param categoryId   the ID of the category to filter by
+     * @param prepared     whether to filter by prepared products
+     * @param pageable     the pagination information
+     * @return a page of products
+     */
+    public Page<ProductDTO> getAllProducts(String search, Long categoryId, Boolean prepared, Pageable pageable) {
         Page<ProductEntity> products;
-        
+
         if (search != null && !search.isEmpty()) {
-            products = productRepository.searchProducts(search, pageable);
+            products = productRepository.searchProductsWithPrepared(search, prepared, pageable);
+        } else if (categoryId != null && prepared != null) {
+            products = productRepository.findByCategoryIdAndPrepared(categoryId, prepared, pageable);
         } else if (categoryId != null) {
             products = productRepository.findByCategoryId(categoryId, pageable);
+        } else if (prepared != null) {
+            products = productRepository.findByPrepared(prepared, pageable);
         } else {
             products = productRepository.findAll(pageable);
         }
-        
+
         return products.map(this::convertToDTO);
     }
-    
-    public List<ProductDTO> getPublicProducts() {
-        List<ProductEntity> products = productRepository.findAvailableProducts();
+
+    /**
+     * Retrieves a list of public products.
+     *
+     * @param pageable the pagination information
+     * @return a list of public products
+     */
+    @Cacheable(cacheNames = "products-public")
+    public List<ProductDTO> getPublicProducts(Pageable pageable) {
+        Pageable request = pageable != null ? pageable : PageRequest.of(0, 100);
+        Page<ProductEntity> products = productRepository.findByStatus(ProductStatus.AVAILABLE, request);
         return products.stream()
+            .filter(ProductEntity::getPrepared)
             .map(this::convertToPublicDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
-    
+
+    /**
+     * Retrieves a product by its ID.
+     *
+     * @param id the ID of the product
+     * @return the product
+     */
     public ProductDTO getProductById(Long id) {
         ProductEntity product = productRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("Producto no encontrado"));
+            .orElseThrow(() -> new NotFoundException(MSG_PRODUCTO_NO_ENCONTRADO));
         return convertToDTO(product);
     }
-    
+
+    /**
+     * Creates a new product.
+     *
+     * @param productDTO the product data
+     * @return the created product
+     */
     @Transactional
+    @org.springframework.cache.annotation.CacheEvict(cacheNames = "products-public", allEntries = true)
     public ProductDTO createProduct(ProductDTO productDTO) {
-        // Check if code already exists
-        if (productRepository.existsByCode(productDTO.getCode())) {
-            throw new BadRequestException("El código de producto ya existe");
+        // If client provided a code, ensure uniqueness
+        if (productDTO.getCode() != null && !productDTO.getCode().isBlank()) {
+            if (productRepository.existsByCode(productDTO.getCode())) {
+                throw new BadRequestException("El código de producto ya existe");
+            }
         }
-        
+
         CategoryEntity category = categoryRepository.findById(productDTO.getCategoryId())
             .orElseThrow(() -> new NotFoundException("Categoría no encontrada"));
-        
+
         ProductEntity product = new ProductEntity();
         product.setCategory(category);
-        product.setCode(productDTO.getCode());
         product.setName(productDTO.getName());
         product.setDescription(productDTO.getDescription());
         product.setImageUrl(productDTO.getImageUrl());
-        product.setUnit(productDTO.getUnit());
+        product.setUnit(productDTO.getUnit() != null && !productDTO.getUnit().isBlank() ? productDTO.getUnit() : "UNIDAD");
         product.setPrice(productDTO.getPrice());
         product.setPurchasePrice(productDTO.getPurchasePrice());
-        product.setStock(productDTO.getStock());
-        product.setMinStock(productDTO.getMinStock());
+        product.setStock(productDTO.getStock() != null ? productDTO.getStock() : 0);
+        product.setMinStock(productDTO.getMinStock() != null ? productDTO.getMinStock() : 5);
         product.setStatus(ProductStatus.AVAILABLE);
-        
+        boolean defaultPrepared = !"Ingredientes".equalsIgnoreCase(category.getName());
+        product.setPrepared(productDTO.getPrepared() != null ? productDTO.getPrepared() : defaultPrepared);
+
+        // Determine code: if provided use it, else generate
+        if (productDTO.getCode() != null && !productDTO.getCode().isBlank()) {
+            product.setCode(productDTO.getCode());
+        } else {
+            // provisional unique code to satisfy NOT NULL + UNIQUE constraints
+            String provisional;
+            do {
+                provisional = "TMP-" + java.util.UUID.randomUUID().toString().replace("-", "").substring(0, 8).toUpperCase();
+            } while (productRepository.existsByCode(provisional));
+            product.setCode(provisional);
+        }
+
         product = productRepository.save(product);
-        
-        // Index in Algolia
-        algoliaService.indexProduct(product);
-        
+
+        // If code was provisional, compute final SKU as slug(name)+"-"+id and update
+        if (product.getCode() != null && product.getCode().startsWith("TMP-")) {
+            String slug = slugify(product.getName());
+            String idStr = String.valueOf(product.getId());
+            int maxLen = Math.max(1, 20 - 1 - idStr.length());
+            if (slug.length() > maxLen) slug = slug.substring(0, maxLen);
+            String finalCode = slug + "-" + idStr;
+            // In rare case of collision, keep provisional
+            if (!productRepository.existsByCode(finalCode)) {
+                product.setCode(finalCode);
+                product = productRepository.save(product);
+            }
+        }
+
+        ProductDTO dto = convertToDTO(product);
         log.info("Product created: {} ({})", product.getName(), product.getCode());
-        
-        return convertToDTO(product);
+        // Broadcast generic change for storefront refresh
+        try { realtimeGateway.products("PRODUCTS_CHANGED"); } catch (Exception ignore) {}
+        broadcastProductChange("created", dto);
+        return dto;
     }
-    
+
+    /**
+     * Updates a product.
+     *
+     * @param id         the ID of the product
+     * @param productDTO the updated product data
+     * @return the updated product
+     */
     @Transactional
+    @org.springframework.cache.annotation.CacheEvict(cacheNames = "products-public", allEntries = true)
     public ProductDTO updateProduct(Long id, ProductDTO productDTO) {
         ProductEntity product = productRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("Producto no encontrado"));
-        
+            .orElseThrow(() -> new NotFoundException(MSG_PRODUCTO_NO_ENCONTRADO));
+
         // Check if code is being changed and already exists
-        if (!product.getCode().equals(productDTO.getCode()) && 
+        if (productDTO.getCode() != null && !productDTO.getCode().isBlank() &&
+            !product.getCode().equals(productDTO.getCode()) &&
             productRepository.existsByCode(productDTO.getCode())) {
             throw new BadRequestException("El código de producto ya existe");
         }
-        
+
         if (productDTO.getCategoryId() != null) {
             CategoryEntity category = categoryRepository.findById(productDTO.getCategoryId())
                 .orElseThrow(() -> new NotFoundException("Categoría no encontrada"));
             product.setCategory(category);
         }
-        
-        product.setCode(productDTO.getCode());
-        product.setName(productDTO.getName());
-        product.setDescription(productDTO.getDescription());
-        product.setImageUrl(productDTO.getImageUrl());
-        product.setUnit(productDTO.getUnit());
-        product.setPrice(productDTO.getPrice());
-        product.setPurchasePrice(productDTO.getPurchasePrice());
-        product.setMinStock(productDTO.getMinStock());
-        
+
+        if (productDTO.getCode() != null && !productDTO.getCode().isBlank()) {
+            product.setCode(productDTO.getCode());
+        }
+        if (productDTO.getName() != null && !productDTO.getName().isBlank()) {
+            product.setName(productDTO.getName());
+        }
+        if (productDTO.getDescription() != null) {
+            product.setDescription(productDTO.getDescription());
+        }
+        if (productDTO.getImageUrl() != null) {
+            product.setImageUrl(productDTO.getImageUrl());
+        }
+        if (productDTO.getUnit() != null && !productDTO.getUnit().isBlank()) {
+            product.setUnit(productDTO.getUnit());
+        }
+        if (productDTO.getPrice() != null) {
+            product.setPrice(productDTO.getPrice());
+        }
+        if (productDTO.getPurchasePrice() != null) {
+            product.setPurchasePrice(productDTO.getPurchasePrice());
+        }
+        if (productDTO.getMinStock() != null) {
+            product.setMinStock(productDTO.getMinStock());
+        }
+        if (productDTO.getPrepared() != null) {
+            product.setPrepared(productDTO.getPrepared());
+        }
+
         // Update status based on stock
         if (product.getStock() <= 0) {
             product.setStatus(ProductStatus.SOLD_OUT);
         } else if (productDTO.getStatus() != null) {
             product.setStatus(ProductStatus.valueOf(productDTO.getStatus()));
         }
-        
+
         product = productRepository.save(product);
-        
-        // Update in Algolia
-        algoliaService.updateProduct(product);
-        
+
+        ProductDTO dto = convertToDTO(product);
         log.info("Product updated: {} ({})", product.getName(), product.getCode());
-        
-        return convertToDTO(product);
+        try { realtimeGateway.products("PRODUCTS_CHANGED"); } catch (Exception ignore) {}
+        broadcastProductChange("updated", dto);
+        return dto;
     }
-    
+
+    /**
+     * Deletes a product.
+     *
+     * @param id the ID of the product
+     */
     @Transactional
+    @org.springframework.cache.annotation.CacheEvict(cacheNames = "products-public", allEntries = true)
     public void deleteProduct(Long id) {
         ProductEntity product = productRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException("Producto no encontrado"));
-        
+            .orElseThrow(() -> new NotFoundException(MSG_PRODUCTO_NO_ENCONTRADO));
+
         product.setStatus(ProductStatus.DISCONTINUED);
         productRepository.save(product);
-        
-        // Remove from Algolia
-        algoliaService.deleteProduct(product.getId().toString());
-        
+
         log.info("Product discontinued: {} ({})", product.getName(), product.getCode());
+        broadcastProductChange("deleted", ProductDTO.builder().id(product.getId()).status(product.getStatus().name()).build());
     }
-    
+
+    /**
+     * Retrieves a list of products with low stock.
+     *
+     * @return a list of products with low stock
+     */
     public List<ProductDTO> getLowStockProducts() {
         List<ProductEntity> products = productRepository.findLowStockProducts();
-        
+
         // Email deshabilitado en esta versión
-        
+
         return products.stream()
             .map(this::convertToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
-    
+
+    /**
+     * Updates the stock of a product.
+     *
+     * @param productId the ID of the product
+     * @param quantity  the quantity to add or remove
+     * @param type      the type of stock movement (IN, OUT, ADJUST)
+     * @param reason    the reason for the stock movement
+     * @return the updated product
+     */
     @Transactional
+    @org.springframework.cache.annotation.CacheEvict(cacheNames = "products-public", allEntries = true)
     public ProductDTO updateStock(Long productId, Integer quantity, String type, String reason) {
         ProductEntity product = productRepository.findById(productId)
-            .orElseThrow(() -> new NotFoundException("Producto no encontrado"));
-        
+            .orElseThrow(() -> new NotFoundException(MSG_PRODUCTO_NO_ENCONTRADO));
+
         MovementType movementType = MovementType.valueOf(type.toUpperCase());
         int stockBefore = product.getStock();
         int stockAfter;
-        
+
         switch (movementType) {
             case IN:
                 stockAfter = stockBefore + quantity;
@@ -190,19 +304,19 @@ public class ProductService {
             default:
                 throw new BadRequestException("Tipo de movimiento inválido");
         }
-        
+
         // Update product stock
         product.setStock(stockAfter);
-        
+
         // Update status based on stock
         if (stockAfter <= 0) {
             product.setStatus(ProductStatus.SOLD_OUT);
         } else if (product.getStatus() == ProductStatus.SOLD_OUT) {
             product.setStatus(ProductStatus.AVAILABLE);
         }
-        
+
         product = productRepository.save(product);
-        
+
         // Record stock movement
         StockMovementEntity movement = new StockMovementEntity();
         movement.setProduct(product);
@@ -212,17 +326,25 @@ public class ProductService {
         movement.setStockAfter(stockAfter);
         movement.setReason(reason != null ? reason : "Ajuste manual");
         movement.setUser(getCurrentUser());
-        
+
         stockMovementRepository.save(movement);
-        
-        log.info("Stock updated for product {} ({}): {} {} -> {}", 
+
+        ProductDTO dto = convertToDTO(product);
+        log.info("Stock updated for product {} ({}): {} {} -> {}",
             product.getName(), product.getCode(), type, stockBefore, stockAfter);
-        
+        broadcastProductChange("stock", dto);
+
         // Email deshabilitado en esta versión
-        
-        return convertToDTO(product);
+
+        return dto;
     }
-    
+
+    /**
+     * Converts a product entity to a DTO.
+     *
+     * @param entity the product entity
+     * @return the product DTO
+     */
     private ProductDTO convertToDTO(ProductEntity entity) {
         ProductDTO dto = ProductDTO.builder()
             .id(entity.getId())
@@ -238,11 +360,12 @@ public class ProductService {
             .stock(entity.getStock())
             .minStock(entity.getMinStock())
             .status(entity.getStatus().name())
-            .created(entity.getCreated())
-            .updated(entity.getUpdated())
+            .prepared(entity.getPrepared())
+            .createdAt(entity.getCreatedAt())
+            .updatedAt(entity.getUpdatedAt())
             .lowStock(entity.getStock() <= entity.getMinStock())
             .build();
-        
+
         // Calculate profit margin if purchase price is available
         if (entity.getPurchasePrice() != null && entity.getPurchasePrice().compareTo(BigDecimal.ZERO) > 0) {
             BigDecimal profit = entity.getPrice().subtract(entity.getPurchasePrice());
@@ -272,8 +395,31 @@ public class ProductService {
     
     private UserEntity getCurrentUser() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null) {
+            throw new NotFoundException("Usuario no autenticado");
+        }
         String email = authentication.getName();
         return userRepository.findByEmail(email)
             .orElseThrow(() -> new NotFoundException("Usuario no encontrado"));
+    }
+
+    private String slugify(String input) {
+        if (input == null) return "";
+        String normalized = java.text.Normalizer.normalize(input, java.text.Normalizer.Form.NFD)
+            .replaceAll("\\p{InCombiningDiacriticalMarks}+", "");
+        String slug = normalized.toLowerCase()
+            .replaceAll("[^a-z0-9]+", "-")
+            .replaceAll("-+", "-")
+            .replaceAll("(^-|-$)", "");
+        return slug;
+    }
+
+    private void broadcastProductChange(String type, ProductDTO payload) {
+        var message = java.util.Map.of(
+            "type", type,
+            "product", payload
+        );
+        realtimeGateway.products(message);
+        realtimeGateway.inventory(message);
     }
 }
